package org.teamtree.objectaid.Accessibilite;

/**
 * Classe qui représente l'accessibilité
 * Exemple : public, private, protected, default
 */
public interface Accessibilite {
    public String getAcces();
}
