package org.teamtree.objectaid.Accessibilite;

/**
 * Classe qui représente l'accessibilité : Default
 */
public class Default implements Accessibilite {

    @Override
    public String getAcces() {
        return "default";
    }
}
