package org.teamtree.objectaid.Accessibilite;

/**
 * Classe qui représente l'accessibilité : Private
 */
public class Private implements Accessibilite {
    @Override
    public String getAcces() {
        return "private";
    }
}
