package org.teamtree.objectaid.Accessibilite;

/**
 * Classe qui représente l'accessibilité : Protected
 */
public class Protected implements Accessibilite {
    @Override
    public String getAcces() {
        return "protected";
    }
}
