package org.teamtree.objectaid.Accessibilite;

/**
 * Classe qui représente l'accessibilité : Public
 */
public class Public implements Accessibilite {
    @Override
    public String getAcces() {
        return "public";
    }
}
