package org.teamtree.objectaid.Entite;

/**
 * Classe qui représente l'entité Classe
 */
public class Classe implements Entite{
    @Override
    public String getEntite() {
        return "class";
    }
}
