package org.teamtree.objectaid.Entite;

/**
 * Classe qui représente une entité
 * Une entité est la représentation d'une classe
 * Exemple : Classe, Interface, Enumération
 */
public interface Entite {
    public String getEntite();
}
