package org.teamtree.objectaid.Entite;

/**
 * Classe qui représente l'entité Enumération
 */
public class Interface implements Entite{
    @Override
    public String getEntite() {
        return "interface";
    }
}
