package org.teamtree.objectaid.Entite;

/**
 * Classe qui représente l'entité Enumération
 */
public class Record implements Entite{
    @Override
    public String getEntite() {
        return "record";
    }
}
