package org.teamtree.objectaid.Etat;

/**
 * Classe qui représente l'état Abstrait
 */
public class Abstract implements Etat{
    @Override
    public String getEtat(){
        return "abstract";
    }
}
