package org.teamtree.objectaid.Etat;

/**
 * Classe qui représente l'état
 * Exemple : Abstract, Final, Static
 */
public interface Etat {
    public String getEtat();
}
