package org.teamtree.objectaid.MVC.Vue;

/**
 * Interface Observateur
 */
public interface Observateur {

    /**
     * Méthode qui permet de mettre à jour l'observateur
     */
    void actualiser();
}
