@startuml
'https://plantuml.com/class-diagram

'Modele'
package "MVC"{
    interface Sujet{
        +ajouterObservateur(Observateur)
        +supprimerObservateur(Observateur)
        +notifierObservateurs()
    }

    class Modele implements Sujet{
        - relation : Map<ClasseEntiere, ArrayList<Fleche>>
        + Modele()

        + ajouterClasse(ClasseEntiere)
        + supprimerClasse(ClasseEntiere)
        + ajouterRelation(ClasseEntiere, Fleche)
        + getClasses() : Set<ClasseEntiere>
        + getRelations(ClasseEntiere) : ArrayList<Fleche>
        + ajouterObservateur(Observateur)
        + supprimerObservateur(Observateur)
        + notifierObservateurs()
    }

    'Observateurs'

    interface Observateur{
        +actualiser(Sujet)
    }

    class VueClasse implements Observateur{
        - classes : ArrayList<Vbox>
        +VueClasse(Modele)
        +actualiser()
    }

}
'Classes'

class ClasseEntiere{
    +ClasseEntiere(path : String)
    +getAttributs() : ArrayList<Attribut>
    +getMethodes() : ArrayList<Methode>
    +getDefinition() : DefinitionClasse
    +getNom() : String
    +getX() : int
    +getY() : int
}

interface Entite{
    +getEntite() : String
}

class Classe implements Entite{
    +getEntite() : String
}

class Interface implements Entite{
    +getEntite() : String
}

class Enum implements Entite{
    +getEntite() : String
}

class Record implements Entite{
    +getEntite() : String
}



interface Accessibilite{
    +getAcces() : String
}

class Public implements Accessibilite{
    +getAcces() : String
}

class Private implements Accessibilite{
    +getAcces() : String
}

class Protected implements Accessibilite{
    +getAcces() : String
}

class Default implements Accessibilite{
    +getAcces() : String
}

interface Etat{
    +getEtat() : String
}

class Abstract implements Etat{
    +getEtat() : String
}

class Final implements Etat{
    +getEtat() : String
}

class Static implements Etat{
    +getEtat() : String
}

class DefinitionClasse{
    -nomClasse : String
    +DefinitionClasse(classe : Class<?>)
    +getNom() : String
    +getAccessibilite() : String
    +getEtat() : ArrayList<Etat>
    +getEntite() : String
}

class Attribut{
    -type : String
    -nom : String
    +Attribut(attr : Field)
    +getAccessibilite() : String
    +getEtat() : ArrayList<Etat>
    +getType() : String
    +getNom() : String
}

class Methode{
    -typeRetourne : String
    -nom : String

    +Methode(m : Method)
    +getNom() : String
    +getTypeRetourne() : String
    +getAccessibilite() : String
    +getEtat() : ArrayList<Etat>
    +getParametres() : ArrayList<Parametre>
}

class Constructeur {
    - nom : String
    + Constructeur(c : Constructor<?>)
    + getNom() : String
    + getAccessibilite() : String
    + getParametres() : ArrayList<Parametre>
}

class Parametre{
    +Parametre(param : Parameter)
    -type : String
    -nom : String
    +getType() : String
    +getNom() : String
}

class Point{
    - x : int
    - y : int
    + getX() : int
    + getY() : int
}

class FabriqueAccessibilite {
    + FabriqueAccessibilite()
    + getAccessibilite(access : int) : Accessibilite
}

class FabriqueEtat {
    + FabriqueEtat()
    + getEtat(modifiers : int) : ArrayList<Etat>
}

class FabriqueEntite {
    + FabriqueEntite()
    + getEntite(classe : Class<?>) : Entite
}




'-----------------------------------'
'Associations'

Modele "1" --> "*" Observateur : -observateurs
Attribut "1" --> "0..1" Accessibilite : -accessibilite
Attribut "1" --> "*" Etat : -etats
DefinitionClasse "1" --> "0..1" Accessibilite : -accessibilite
DefinitionClasse "1" --> "0..*" Etat : -etats
DefinitionClasse "1" --> "0..1" Entite : -entite
Constructeur "1" --> "0..1" Accessibilite : -accessibilite
Constructeur "1" --> "*" Parametre : -parametres
Methode "1" --> "0..1" Accessibilite : -accessibilite
Methode "1" --> "*" Etat : etats
Methode "1" --> "*" Parametre : parametres
ClasseEntiere "1" --> "1" DefinitionClasse : definitionClasse
ClasseEntiere "1" --> "*" Attribut : attributs
ClasseEntiere "1" --> "*" Methode : methodes
ClasseEntiere "1" --> "*" Constructeur : constructeurs
ClasseEntiere "1" --> "1" Point : -coordonnees


@enduml